Story 2319. Updated sidebar flex-wrap to prevent bootstrap from overriding it.

--- a/css/canfar-bs4.css
+++ b/css/canfar-bs4.css
@@ -74,7 +74,7 @@ div.container {
   margin-bottom: 20px;
   margin-left: -20px;
   background-color: #fff;
-  flex-wrap: nowrap;
+  flex-wrap: nowrap!important;
 }
 
 .nav-sidebar > li > a {
